--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -37,7 +37,7 @@
         "flag": "علم",
         "coatOfArms": "شعار النبالة",
         "afterFlagOrCOA": " لـ ",
-        "flagOrCOAEnd": " هو:"
-
+        "flagOrCOAEnd": " هو:",
+        "wikiButtonText": "اعرف أكثر"
     }
 }
