--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -37,6 +37,7 @@
         "flag": "Flag",
         "coatOfArms": "Coat of Arms",
         "afterFlagOrCOA": " of the ",
-        "flagOrCOAEnd": " is:"
+        "flagOrCOAEnd": " is:",
+        "wikiButtonText": "Learn More"
     }
 }
