--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -37,6 +37,7 @@
         "flag": "Флаг",
         "coatOfArms": "Герб",
         "afterFlagOrCOA": " страны ",
-        "flagOrCOAEnd": ":"
+        "flagOrCOAEnd": ":",
+        "wikiButtonText": "Узнать больше"
     }
 }
